REST: return user info for mover
Motivation:
as per Issue 8181:
"
we've been using the SSH interface to extract mover information on the user owning the mover using mover ls -u. Unfortunately it's inconvenient to parse in addition to having access to the SSH admin interface. Is it possible to add the information on

Client IP
UID
DN if applicable
GIDs (as a list)
"

Modificataion:
- add UserData Subclass with fields uid, dn, gids to MoverData class; add UserData field
- add clientIP field to MoverData class
- set UserData in MoverRequestScheduler

Result:

[
  {
    "pnfsId": "0000019FEC31F37775D4B0F4219A8191F732",
    "clientIp": "/192.168.65.1",
    "queue": null,
    "mode": "[CREATE, READ, WRITE]",
    "door": "WebDAV-1e2a0dccdf32@core",
    "storageClass": "<Unknown>:<Unknown>",
    "state": "RUNNING",
    "bytes": 3145728,
    "timeInMilliseconds": 2782,
    "startTime": 1786374124458,
    "submitTime": 1786374124458,
    "lastModified": 1786374127241,
    "moverId": 1,
    "userData": {
      "dn": 1234,
      "userId": 1000,
      "groupIds": [ 1000, 2000 ]
    }
  }
]

Target: master, 11.2
fixes issue: 8181